(small alignment fixes)

--- a/src/app/shared/components/header/mobile-header.component.scss
+++ b/src/app/shared/components/header/mobile-header.component.scss
@@ -25,15 +25,16 @@
   nav.navbar {
     @include darkest-background-texture;
     box-shadow: 0 .25rem .5rem rgba(0, 0, 0, .5);
-    height: calc(4rem - 2px);
+    height: 63px;
+    padding-bottom: 3px;
 
     .navbar-brand {
       padding: 0;
       margin-left: .75rem;
 
       img {
-        height: 2rem;
-        margin-bottom: .5rem;
+        height: 28px;
+        margin-bottom: 8px;
       }
     }
 
